--- a/exercicios/ex001/index.html
+++ b/exercicios/ex001/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primeiro JS</title>
+    <title>Olá, Mundo!</title>
 </head>
 <body>
     <h1>Primeiro Js</h1>
